--- a/sisters.html
+++ b/sisters.html
@@ -892,6 +892,9 @@
 
       <div class="container">
         <div class="copyright">
+          This organization is a registered student organization
+            of Cornell
+            University. <br>
           Copyright &copy; <strong>Cornell Alpha Omega Epsilon</strong>
         </div>
         <div class="credits">
