update sp24 leadership

--- a/alumnae.html
+++ b/alumnae.html
@@ -110,7 +110,67 @@
     <!--==========================
       Alumnae Section
     ============================-->
+    <!--==========================
+      Zeta Class Section
+      ============================-->
+    <section id="team" class>
+      <div class="container">
+        <br>
+        <div class="section-header text-center">
+          <h5>Spring 2021</h5>
+          <h3>Zeta Class</h3>
+          <br>
+        </div>
 
+        <div class="row">
+
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <img src="images/zetaclass/anusua2.jpg" class="img-fluid" alt>
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Anusua Nath</h4>
+                  <span>Civil Engineering '23</span>
+                  <div class="social">
+                    <a href="https://www.linkedin.com/in/anusua-nath-56552615a"
+                      target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
+                    <a
+                      href="https://instagram.com/anusua.nath?igshid=MDM4ZDc5MmU="
+                      target="_blank"><i class="fa fa-instagram"></i></a>
+                    <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
+                    <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <img src="images/zetaclass/camille.jpg" class="img-fluid" alt>
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Camille Slattery</h4>
+                  <span>Mechanical Engineering '23</span>
+                  <div class="social">
+                    <a
+                      href="https://www.linkedin.com/in/camille-slattery-63a4291b3"
+                      target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
+                    <a
+                      href="https://instagram.com/camilleslatt?igshid=YmMyMTA2M2Y="
+                      target="_blank"><i class="fa fa-instagram"></i></a>
+                    <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
+                    <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
     <!--==========================
       Epsilon Class Section
       ============================-->
@@ -121,8 +181,48 @@
           <h3>Epsilon Class</h3>
           <br>
         </div>
-
         <div class="row">
+
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <img src="images/epsilonclass/mahak.jpg" class="img-fluid" alt>
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Mahak Bindal</h4>
+                  <span>Computer Science & Info Sci '23</span>
+                  <div class="social">
+                    <a href="http://linkedin.com/in/mahakbindal" target="_blank"><i
+                        class="fa fa-linkedin"></i></a>
+                    <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
+                    <!-- <a href="link" target="_blank"><i class="fa fa-instagram"></i></a> -->
+                    <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
+                    <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <img src="images/epsilonclass/sandra.jpg" class="img-fluid" alt>
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Sandra Cangelosi</h4>
+                  <span>Mechanical Engineering '23</span>
+                  <div class="social">
+                    <a href="http://linkedin.com/in/sandra-cangelosi-28b2181a3"><i
+                        class="fa fa-linkedin" target="_blank"></i></a>
+                    <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
+                    <a href="https://www.instagram.com/sandra.cangelosi/"><i
+                        class="fa fa-instagram" target="_blank"></i></a>
+                    <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
+                    <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="col-lg-3 col-md-6">
             <div class="member">
               <img src="images/epsilonclass/danielle.jpg" class="img-fluid" alt>
