events, recruitment, leadership update for SP24

--- a/events.html
+++ b/events.html
@@ -121,10 +121,12 @@
 
         <div class="row">
 
-          <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-duration="1.0s">
+          <div class="col-md-6 col-lg-4 wow bounceInUp"
+            data-wow-duration="1.0s">
             <div class="box">
               <div class="icon" style="background: #fceef3;"><i
-                  class="ion-ios-analytics-outline" style="color: #ff689b;"></i></div>
+                  class="ion-ios-analytics-outline"
+                  style="color: #ff689b;"></i></div>
               <h4 class="title"><a>Professional Development</a></h4>
               <p class="description">We are all engineers and technical science
                 majors, and we all need to conduct ourselves in a professional
@@ -138,7 +140,8 @@
             data-wow-duration="1.4s">
             <div class="box">
               <div class="icon" style="background: #fff0da;"><i
-                  class="ion-ios-bookmarks-outline" style="color: #e98e06;"></i></div>
+                  class="ion-ios-bookmarks-outline"
+                  style="color: #e98e06;"></i></div>
               <h4 class="title"><a>Philanthropy</a></h4>
               <p class="description">Our communities have given so much to us,
                 everything from education to public parks, so it's time for us
@@ -154,7 +157,8 @@
             data-wow-duration="1.4s">
             <div class="box">
               <div class="icon" style="background: #e6fdfc;"><i
-                  class="ion-ios-paper-outline" style="color: #3fcdc7;"></i></div>
+                  class="ion-ios-paper-outline"
+                  style="color: #3fcdc7;"></i></div>
               <h4 class="title"><a>Sisterhood</a></h4>
               <p class="description">We all come from different backgrounds,
                 grew up in different places, and study different majors. This
@@ -201,13 +205,151 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-sis"
             data-wow-delay="0.1s">
             <div class="portfolio-wrap">
+              <img src="images/eventsnew2/11.jpg" class="img-fluid" alt>
+              <div class="portfolio-info">
+                <h4><a>Brunch</a></h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sis"
+            data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
+              <img src="images/eventsnew2/16.jpg" class="img-fluid" alt>
+              <div class="portfolio-info">
+                <h4><a>Dolphlin at Day Away</a></h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sis"
+            data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
+              <img src="images/eventsnew2/9.jpg" class="img-fluid" alt>
+              <div class="portfolio-info">
+                <h4><a>Winter Formal</a></h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sis"
+            data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
               <img src="images/eventsnew/22.jpg" class="img-fluid" alt>
               <div class="portfolio-info">
                 <h4><a>Big Little Reveal</a></h4>
               </div>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sis"
+            data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
+              <img src="images/eventsnew2/19.jpg" class="img-fluid" alt>
+              <div class="portfolio-info">
+                <h4><a>Theta Class Initiation</a></h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sis"
+            data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
+              <img src="images/eventsnew2/5.jpg" class="img-fluid" alt>
+              <div class="portfolio-info">
+                <h4><a>Winter Formal</a></h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sis"
+            data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
+              <img src="images/eventsnew2/7.jpg" class="img-fluid" alt>
+              <div class="portfolio-info">
+                <h4><a>Eta Class</a></h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sis"
+            data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
+              <img src="images/eventsnew2/14.jpg" class="img-fluid" alt>
+              <div class="portfolio-info">
+                <h4><a>Brunch</a></h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sis"
+            data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
+              <img src="images/eventsnew2/6.jpg" class="img-fluid" alt>
+              <div class="portfolio-info">
+                <h4><a>Sisters in CA</a></h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sis"
+            data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
+              <img src="images/eventsnew2/13.jpg" class="img-fluid" alt>
+              <div class="portfolio-info">
+                <h4><a>Sparklin</a></h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sis"
+            data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
+              <img src="images/eventsnew2/3.jpg" class="img-fluid" alt>
+              <div class="portfolio-info">
+                <h4><a>Adrenalin Dinner</a></h4>
+              </div>
+            </div>
+          </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sis"
+            data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
+              <img src="images/eventsnew2/12.jpg" class="img-fluid" alt>
+              <div class="portfolio-info">
+                <h4><a>Big Little Reveal</a></h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sis"
+            data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
+              <img src="images/eventsnew2/8.jpg" class="img-fluid" alt>
+              <div class="portfolio-info">
+                <h4><a>Winter Formal</a></h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sis"
+            data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
+              <img src="images/eventsnew2/1.jpg" class="img-fluid" alt>
+              <div class="portfolio-info">
+                <h4><a>Brunch</a></h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sis"
+            data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
+              <img src="images/eventsnew2/21.jpg" class="img-fluid" alt>
+              <div class="portfolio-info">
+                <h4><a>Adrenalin</a></h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sis"
+            data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
+              <img src="images/eventsnew/32.jpg" class="img-fluid" alt>
+              <div class="portfolio-info">
+                <h4><a>Formal</a></h4>
+              </div>
+            </div>
+          </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-sis"
             data-wow-delay="0.1s">
             <div class="portfolio-wrap">
@@ -623,7 +765,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-sis"
             data-wow-delay="0.1s">
             <div class="portfolio-wrap">
-              <img src="images/events/sisterhood/holi.jpg" class="img-fluid" alt>
+              <img src="images/events/sisterhood/holi.jpg" class="img-fluid"
+                alt>
               <div class="portfolio-info">
                 <h4><a>Holi</a></h4>
               </div>
