--- a/recruitment.html
+++ b/recruitment.html
@@ -120,7 +120,9 @@
             <img src="images/sp23recruitment2.jpeg" style="height:500px;width:500px" class="img-fluid" >
           </div> -->
           <div class="text-center">
-            <img src="images/eventsnew/32.jpg" style="width:800px"
+            <!-- <img src="images/eventsnew/32.jpg" style="width:800px"
+              class="img-fluid"> -->
+            <img src="images/eventsnew2/18.jpg" style="width:820px"
               class="img-fluid">
           </div>
         </header>
@@ -139,23 +141,42 @@
         </header> -->
 
         <header class="section-header">
-          <h3>Recruitment</h3>
+          <h3>Spring 2024 Recruitment</h3>
         </header>
-
         <header class="text-center">
-          <p>Follow us on Instagram for the latest updates!<br>Please email
+          <p><b>All applicants must attend an info session and either the
+              Coffee Chat or the Resume Review. </b><br> Follow us on Instagram
+            for
+            the
+            latest updates!<br>Please email
             aoecornell@gmail.com with any questions.</p>
         </header>
+        <div class="text-center">
+          <img src="images/sp24recruitment/1.PNG"
+            style="height:400px;width:400px;margin-right:10px; margin-bottom:15px;"
+            class="img-fluid">
+          <img src="images/sp24recruitment/4.PNG"
+            style="height:400px;width:400px;  margin-bottom:15px;"
+            class="img-fluid">
+          <br>
+          <img src="images/sp24recruitment/2.PNG"
+            style="height:400px;width:400px; margin-right:10px;"
+            class="img-fluid">
+          <img src="images/sp24recruitment/3.PNG"
+            style="height:400px;width:400px" class="img-fluid">
+        </div>
 
         <header class="section-header">
-          <div class="text-center">
+          <!-- <div class="text-center">
             <iframe width="560" height="315"
               src="https://www.youtube.com/embed/7ZnEN4TEKWY" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
-          </div>
+          </div> -->
         </header>
 
+        <br>
+        <br>
         <br>
         <br>
 
@@ -176,7 +197,8 @@
             </div>-->
 
             <a data-toggle="collapse" class="collapsed" href="#faq2">What are
-              the requirements for me to apply?<i class="ion-android-remove"></i></a>
+              the requirements for me to apply?<i
+                class="ion-android-remove"></i></a>
             <div id="faq2" class="collapse" data-parent="#faq-list">
               <p>
                 - A full time student at Cornell University<br><br>
@@ -199,8 +221,8 @@
               to come to an info session?<i class="ion-android-remove"></i></a>
             <div id="faq3" class="collapse" data-parent="#faq-list">
               <p>
-                Info sessions are strongly recommended, but not required.
-              </p>
+                Yes, all applicants must attend an info session and either the
+                Coffee Chat or the Resume Review. </p>
             </div>
 
             <a data-toggle="collapse" class="collapsed" href="#faq4">How many
