--- a/sisters.html
+++ b/sisters.html
@@ -73,7 +73,8 @@
             <li><a href="events.html">Events</a></li>
             <li class="drop-down active"><a href="sisters.html">Sisterhood</a>
               <ul>
-                <li class="active"><a href="sisters.html">Active Sisters</a></li>
+                <li class="active"><a href="sisters.html">Active
+                    Sisters</a></li>
                 <li><a href="leadership.html">Leadership</a></li>
                 <li><a href="alumnae.html">Alumnae</a></li>
                 <!-- <li class="drop-down"><a href="#">Drop Down 2</a>
@@ -151,7 +152,8 @@
                   <h4>Sarah Bae</h4>
                   <span>Environmental Engineering ‘25</span>
                   <div class="social">
-                    <a href="https://www.linkedin.com/in/sarah-bae-803985184/"><i
+                    <a
+                      href="https://www.linkedin.com/in/sarah-bae-803985184/"><i
                         class="fa fa-linkedin" target="_blank"></i></a>
                     <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
                     <a href="https://www.instagram.com/sarahhsbae/"><i
@@ -172,7 +174,8 @@
                   <h4>Stella Dong</h4>
                   <span>Computer Science '25</span>
                   <div class="social">
-                    <a href="https://www.linkedin.com/in/stella-dong-4631391b0/"><i
+                    <a
+                      href="https://www.linkedin.com/in/stella-dong-4631391b0/"><i
                         class="fa fa-linkedin" target="_blank"></i></a>
                     <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
                     <a href="https://www.instagram.com/_stelladong/"><i
@@ -213,7 +216,8 @@
                   <h4>Kayla Johns</h4>
                   <span>Chemical Engineering '25</span>
                   <div class="social">
-                    <a href="https://www.linkedin.com/in/kayla-johns-453504230/"><i
+                    <a
+                      href="https://www.linkedin.com/in/kayla-johns-453504230/"><i
                         class="fa fa-linkedin" target="_blank"></i></a>
                     <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
                     <a href="https://www.instagram.com/kayla_johns_/"><i
@@ -322,7 +326,8 @@
                       href="https://www.linkedin.com/in/jasmine-mustafa-028a2a147/"><i
                         class="fa fa-linkedin" target="_blank"></i></a>
                     <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
-                    <a href="https://www.instagram.com/jasmine_mustafa_/?hl=en"><i
+                    <a
+                      href="https://www.instagram.com/jasmine_mustafa_/?hl=en"><i
                         class="fa fa-instagram" target="_blank"></i></a>
                     <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
                     <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
@@ -384,7 +389,8 @@
                   <h4>Joan Rong</h4>
                   <span>Biomedical Engineering '25</span>
                   <div class="social">
-                    <a href="https://www.linkedin.com/in/joan-rong-164553223/"><i
+                    <a
+                      href="https://www.linkedin.com/in/joan-rong-164553223/"><i
                         class="fa fa-linkedin" target="_blank"></i></a>
                     <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
                     <a href="https://www.instagram.com/r_kxuan/"><i
@@ -446,7 +452,8 @@
                   <h4>Antoinette Torres</h4>
                   <span>Computer Science '26</span>
                   <div class="social">
-                    <a href="https://www.linkedin.com/in/antoinettemarietorres/"><i
+                    <a
+                      href="https://www.linkedin.com/in/antoinettemarietorres/"><i
                         class="fa fa-linkedin" target="_blank"></i></a>
                     <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
                     <a href="https://www.instagram.com/antoinztte/"><i
@@ -467,7 +474,8 @@
                   <h4>Sophie Wang</h4>
                   <span>Computer Science '26</span>
                   <div class="social">
-                    <a href="https://www.linkedin.com/in/sophie-wang-a175761b4/"><i
+                    <a
+                      href="https://www.linkedin.com/in/sophie-wang-a175761b4/"><i
                         class="fa fa-linkedin" target="_blank"></i></a>
                     <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
                     <!-- <a href=""><i class="fa fa-instagram" target="_blank"></i></a> -->
@@ -587,7 +595,7 @@
                   <h4>Sarah Pambianchi </h4>
                   <span>Electrical and Computer Engineering '25</span>
                   <div class="social">
-                    <a href="www.linkedin.com/in/sarahpambianchi"
+                    <a href="https://www.linkedin.com/in/sarahpambianchi"
                       target="_blank"><i class="fa fa-linkedin"></i></a>
                     <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
                     <a
